# tournament

./: .env  .gitignore  Cargo.toml  package-lock.json  package.json
migrations/2020-09-03-181656_create_tournament/: down.sql  up.sql
migrations/2020-09-03-182943_mock_data/: down.sql  up.sql
src/: main.rs  mock.rs
src/model/: mod.rs  models.rs  old.rs  schema.rs
src/rust/: Cargo.toml
src/rust/src/: main.rs  mock.rs  model.rs
