[package]
name = "rust"
version = "0.1.0"
authors = ["Marcus Downing <marcus@bang-on.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
dialoguer = "0.6"

diesel = { version = "1.4.5", features = [ "mysql" ] }
dotenv = "0.15.0"
# rocket = "0.5.0-dev"
